--- a/resources/css/Series.css
+++ b/resources/css/Series.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
 }
 
 .series__item {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-grow: 1;
 }
 
 
