--- a/resources/css/match.css
+++ b/resources/css/match.css
@@ -30,3 +30,42 @@
     text-align: center;
     pointer-events: none;
 }
+
+
+
+
+.match__row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.match__teams {
+    display: flex;
+    flex: 3;
+    justify-content: center;
+}
+
+.match__team {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.match__score {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 8px;
+}
+
+.match__date {
+    display: flex;
+    flex: 1;
+    font-size: 14px;
+}
+
+.match__game {
+    display: flex;
+    flex: 1;
+}
