--- a/resources/css/match.css
+++ b/resources/css/match.css
@@ -18,9 +18,11 @@
 .match-header__team-name {
     margin-top: 8px;
     font-weight: bold;
+    text-align: center;
 }
 
 .match-header__score {
+    font-size: 28px;
     font-weight: bold;
     position: absolute;
     top: 25px;
