--- a/resources/css/match.css
+++ b/resources/css/match.css
@@ -15,6 +15,12 @@
     margin-bottom: 12px;
 }
 
+.match-header__team {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .match-header__team-name {
     margin-top: 8px;
     font-weight: bold;
