--- a/resources/css/match.css
+++ b/resources/css/match.css
@@ -50,7 +50,7 @@
 
 .match__teams {
     display: flex;
-    flex: 3;
+    flex-grow: 1;
     justify-content: center;
 }
 
@@ -58,6 +58,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 125px;
 }
 
 .match__score {
@@ -69,11 +70,9 @@
 
 .match__date {
     display: flex;
-    flex: 1;
     font-size: 14px;
 }
 
 .match__game {
     display: flex;
-    flex: 1;
 }
