--- a/resources/css/match.css
+++ b/resources/css/match.css
@@ -40,12 +40,14 @@
 }
 
 
-
-
 .match__row {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.match__row:hover {
+    background: var(--background_hover);
 }
 
 .match__teams {
