--- a/resources/css/tournament.css
+++ b/resources/css/tournament.css
@@ -6,3 +6,13 @@
 .tournament__row:hover {
     background: var(--background_hover);
 }
+
+.tournament-header {
+    padding: 25px 16px 28px;
+    position: relative;
+}
+
+.tournament-header {
+    text-align: center;
+    margin-bottom: 12px;
+}
