add team roster with avatars

--- a/resources/less/roster.less
+++ b/resources/less/roster.less
@@ -1,8 +1,17 @@
 .roster__container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
+}
+
+.roster__list-item {
+    display: flex;
+    align-items: center;
 }
 
 .roster__list-item:not(:last-child) {
     margin-bottom: 8px;
+}
+
+.roster__nick-name {
+    margin-left: 8px;
 }
