--- a/resources/less/match.less
+++ b/resources/less/match.less
@@ -1,6 +1,14 @@
 .match-header {
     padding: 25px 16px 28px;
     position: relative;
+
+    &__buttons {
+        display: flex;
+        justify-content: center;
+        > button {
+            margin: 0 10px;
+        }
+    }
 }
 
 .match-header__tournament {
