--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -5,3 +5,15 @@
 @import "match";
 @import "roster";
 @import "tournaments";
+
+button {
+    cursor: pointer !important;
+}
+
+.HorizontalScroll__in {
+    cursor: pointer;
+
+    > div > div:hover {
+        background-color: var(--background_hover);
+    }
+}
