--- a/resources/less/match.less
+++ b/resources/less/match.less
@@ -5,6 +5,7 @@
     &__buttons {
         display: flex;
         justify-content: center;
+        margin-top: 20px;
         > button {
             margin: 0 10px;
         }
@@ -126,6 +127,16 @@
 
 .match__game {
     display: flex;
+}
+
+.match__stats {
+
+    padding: 0;
+    margin: 0 -12px;
+
+    img {
+        width: 100%;
+    }
 }
 
 .match__stream-container {
